480px view and corrected truncate function call

--- a/public/stylesheets/events-core.css
+++ b/public/stylesheets/events-core.css
@@ -133,13 +133,14 @@ div#news-lab-events nav.breadcrumb a {
   font-weight: 800;
   color: #505050;	
   background-color: #dcdcdc;
-  padding: 5px 0 5px 9px;
-  min-width: 20%;
-  width: 25%;
+  padding: 5px 0 4px 9px;
+  min-width: 80px;
+  width: 100px;
   white-space: nowrap;
   float: left;
   border: 1px solid #fff;
   margin-right: 13px;
+  text-overflow: ellipsis;
 }
 div#news-lab-events nav.breadcrumb a:after {
   position: absolute;
